correct path image for old radio

--- a/assets/themes/old-radio.css
+++ b/assets/themes/old-radio.css
@@ -1,6 +1,6 @@
 div#old-radio {
     direction: rtl;
-    background-image: url(images/old-radio.png);
+    background-image: url(../images/old-radio.png);
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center center;
